--- a/template/src/tailwind/tailwind.css
+++ b/template/src/tailwind/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind preflight;
+
 @tailwind components;
+
+/* Add custom components Here */
+
 @tailwind utilities;
+
+/* Add custom utilities here */
